# sem

merge_sorts/: main.cpp  merge_sorts_demo  merge_sorts_tests
merge_sorts/include/: merge_sort_one_phase.h  merge_sort_simple.h  natural_merge_sort.h
merge_sorts/tests/: test_merge_sorts.cpp
seminar1_gtest/: main  main.cpp  tests_gtest
seminar1_gtest/include/: bubble_sort.h  exchange_sort.h  insertion_sort.h  optimized_bubble_sort.h  selection_sort.h
seminar1_gtest/tests/: test_sorting_gtest.cpp
seminar2_simple/: main.cpp  seminar2_demo  seminar2_tests
seminar2_simple/include/: binary_insertion_sort.h  shaker_sort.h
seminar2_simple/tests/: test_seminar2.cpp
seminar3_simple/: CMakeLists.txt  main.cpp  test_seminar
seminar3_simple/include/: quick_sort.h  shell_sort.h
seminar3_simple/tests/: test_seminar3.cpp
